Fix attempt 2 for hidden reply button on mobile

--- a/imports/client/ui/style.scss
+++ b/imports/client/ui/style.scss
@@ -1,8 +1,8 @@
 // DOCUSS
 #dcs-root {
+  height: 100%;
   display: flex;
   flex-direction: row;
-  height: 100vh;
 
   //----------------------------------------------------------------------------
 
